--- a/index.css
+++ b/index.css
@@ -166,3 +166,37 @@ body {
 .filter-btn:hover {
     background-color: #e09b00;
 }
+
+  
+  
+
+.Shimmer {
+    border: 1px solid black;
+    width: 300px;
+    height: 200px;
+    border-radius: 12px;
+    background-color: #f0f0f0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 10px; /* Small padding to prevent sticking to the very top */
+    position: relative;
+  }
+  
+  .i {
+    width: 80%; 
+    height: 50%; 
+    background-color: white; 
+    border-radius: 8px;
+    margin-bottom: 10px; 
+  }
+  .c{
+   display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    padding: 20px;
+  }
+  
+  
+  
